various css and other styling updates

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,20 @@
 
-header {
-  /* max-height: 150px; */
+h2 {
+  margin-left: 20px;
+}
 
+.jumbotron {
+  background-color: #47484c;
+  color: white;
+  margin-bottom: 0;
 }
 
 .search {
   height: 100vh;
+}
+
+.fas, .fa-search {
+  color: white;
 }
 
 .list-group-item{
@@ -13,9 +22,16 @@ header {
   border: none;
 }
 
-/* .card-body {
-  flex: auto;
-} */
+.card {
+  margin: 15px;
+  /* background-color: rgb(255, 126, 126); */
+  /* border: black solid 1px; */
+  justify-content: space-between;
+}
+
+.card-header {
+  background-color: white;
+}
 
 .card-width {
   width: 15rem;
@@ -38,4 +54,8 @@ header {
 .severe {
   background-color: red;
   padding: 5px;
+}
+
+#five-day-forecast-container {
+  margin-top: 25px;
 }
